--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL = http://localhost:5000
+VITE_API_BASE_URL = https://udupi-saree-backend.onrender.com
 
 VITE_RAZORPAY_KEY_ID=rzp_test_cIasXqaGuUNEZJ
 VITE_RAZORPAY_KEY_SECRET=a3c3GtV6Yx4iBQKiGItw4sqg
